--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -105,7 +105,8 @@
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}",
+        // "format-alt": "{:%Y-%m-%d}",
+        "format-alt": "{:%d-%m-%Y}",
 	"format": "{:%H:%M:%S}",
 	"interval": 1
     },
