--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,5 @@
 font-family = Iosevka Term
 font-size = 14
-theme = light:catppuccin-latte, dark:catppuccin-macchiato
+theme = light:rose-pine-dawn, dark:rose-pine-moon
 maximize = true
 
